bk_ida/gccida/c3/noce_get_alt_condition
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1613:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v13; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1617:4: error: expected ';' after expression
rtx reg_equal_equiv_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1617:5: error: use of undeclared identifier 'reg_equal_equiv_note'; did you mean 'find_reg_equal_equiv_note'?
rtx reg_equal_equiv_note; // rax 
    ^~~~~~~~~~~~~~~~~~~~
    find_reg_equal_equiv_note
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/rtl.h:1491:12: note: 'find_reg_equal_equiv_note' declared here
extern rtx find_reg_equal_equiv_note    PARAMS ((rtx));
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1623:4: error: expected ';' after expression
rtx v23; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1623:5: error: use of undeclared identifier 'v23'
rtx v23; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1625:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1625:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1627:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1627:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1629:4: error: expected ';' after expression
rtx v29; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1629:5: error: use of undeclared identifier 'v29'
rtx v29; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1630:4: error: expected ';' after expression
rtx v30; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1630:5: error: use of undeclared identifier 'v30'; did you mean 'v10'?
rtx v30; // rax 
    ^~~
    v10
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1610:9: note: 'v10' declared here
__int64 v10; // rax 
        ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1632:4: error: expected ';' after expression
rtx jump; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1632:5: error: use of undeclared identifier 'jump'
rtx jump; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1633:4: error: expected ';' after expression
rtx v33; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1633:5: error: use of undeclared identifier 'v33'
rtx v33; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1634:4: error: expected ';' after expression
rtx v34; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/ifcvt.c:1634:5: error: use of undeclared identifier 'v34'
rtx v34; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/noce_get_alt_condition/src/obj/ifcvt.o] Error 1
